plugins {
    id 'org.springframework.boot' version '2.7.2'
    id 'io.spring.dependency-management' version '1.0.12.RELEASE'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //	thymeleaf
    implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'

    //	web
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'


    //	db
    runtimeOnly 'org.postgresql:postgresql'

    //	entity
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.hibernate:hibernate-core'
    implementation 'javax.validation:validation-api'

    //	test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.6.3'
    implementation 'junit:junit:4.13.1'

    //	security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    //	email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    //	logback
    testImplementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'org.slf4j:slf4j-api:1.7.36'
    // JSON
    implementation 'org.json:json:20220320'


    // swagger
    implementation('org.springdoc:springdoc-openapi-ui:1.6.9')

    // websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    //aop
    implementation 'org.springframework:spring-aop:5.3.22'


}

tasks.named('test') {
    useJUnitPlatform()
}
